# Cython-Cmake-Template

./: .gitignore  README.md  requirements.txt  setup.py  test.py
.github/workflows/: ci.yml
cpp_code/: CMakeLists.txt
cpp_code/include/: foobar.h
cpp_code/src/: foobar.cpp
cython_vector/: vectors.pyi  vectors.pyx  vectors_py.py
nice_module/: foobar.cpp  foobar.pyi  foobar.pyx
